# QFluent

./: CMakeLists.txt  README.md  qmldir
cmake/: Dependencies.cmake  FetchFluentDesignIcons.cmake  FetchQOlm.cmake  FetchQtGeneratorCMake.cmake  Version.cmake
qml/: Button.qml
